# mobile-auth

./: .gitignore  AuthMobileGTK.py  Authentication_ALTMobile_sheet.txt  Authentication_mobile.py  Mobile_Auth.desktop  README.md  authentication_mobile.backend  authentication_mobile.py  meson.build  mobile-auth.backend  mobile-auth.doap  mobile-auth.in  ru.basealt.alterator.authentication_mobile1.policy  ru.basealt.alterator.mobile-auth.policy
.gear/: authentication_mobile.spec  mobile-auth.spec  rules
data/: authentication_mobile.backend  io.github.SokolovValy.MobileAuth.desktop.in  io.github.SokolovValy.MobileAuth.metainfo.xml.in  io.guthub.SokolovValy.MobileAuth.desktop.in  io.guthub.SokolovValy.MobileAuth.gresource.xml  io.guthub.SokolovValy.MobileAuth.metainfo.xml.in  meson.build  mobile-auth.backend  org.altlinux.alterator.authentication_mobile1.policy  org.altlinux.alterator.mobile-auth1.policy  ru.basealt.alterator.authentication_mobile1.policy
data/icons/: meson.build
data/ui/: admin-dialog.blp  welcome-dialog.blp  window.blp
locales/en_US/LC_MESSAGES/: appname.mo  appname.po
locales/ru_RU/LC_MESSAGES/: appname.mo  appname.po
mobileauth/: admin_dialog.py  application.py  welcome_dialog.py  window.py
po/: POTFILES.in  meson.build  mobile-auth.pot  ru.po  update_potfiles.sh
